--- a/res/layout/success.xml
+++ b/res/layout/success.xml
@@ -7,8 +7,7 @@
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="Hello World, TwitterActivity"
+    android:text="Success"
     android:textSize="20dip"
     />
 </LinearLayout>
-
